--- a/Blogb.html
+++ b/Blogb.html
@@ -73,7 +73,7 @@ Cell No: +27-73 373 0577/
 </p>
 
 <p><div>
-     <a href="mailto:Pusejoy@gamil.com">Email</a>
+     <a href="mailto:Pusejoy@gmail.com">Email</a>
     </div><br>
 
     Address: 
