--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img id="our-mission" src="images/Our mission.jpg"><br>
 
 <p> At Stepping Stone day and aftercare nursery school, we pride ourselves in providing
-    a safe, fun accademically rich environment that promotes social emotional cognitive and phsical growth.
+    a safe, fun accademically rich environment that promotes social emotional cognitive and physical growth.
     We aim to engage our children in high quality learning expriences to maximise their holistic development.
     We envision developing future generations of leaders who approach their life challenges with resiliency and independence.
 </p>
