--- a/blog.html
+++ b/blog.html
@@ -21,12 +21,12 @@
         <img id="swimming" src="images/Childcare.jpeg"><br>
 
         <P>Stepping Stone Nursery School will work with you the parent to make your baby's transition a smoothand happy time by creating a warm naturing interaction with 
-            all babies in out care.  We provide personalised care foor each baby based on your baby's unique needs, nutritional guidelines and any specail attention required.
+            all babies in and out care.  We provide personalised care for each baby based on your baby's unique needs, nutritional guidelines and any specail attention required.
             Through our low ratios, in the warm setting of each baby room in our Nursery; daily age appropriate stimulation is provided as help for your infant to reach his/her 
             developmental milestones.
         </P>
         <h2>Jodders 1-2 years</h2>
-        <p>This age group enjoys activities that are builr around our toddlers limitless curiosity as we encourage their natural desire to explore through a range of indoor fun 
+        <p>This age group enjoys activities that are build around our toddlers limitless curiosity as we encourage their natural desire to explore through a range of indoor fun 
             like arts, music, movement, sensory activities and outside gross motor play. Our toddlers days are packed with fun learning experiences that enhance their development.
         </p>
 
@@ -44,7 +44,7 @@
         <img id="director" src="images/director.jpg"><br>
 
         <P>As the owner and Director  fo Stepping Stone Nusery School, I aspire to establish a joy of learning and fun of Childhood exploration in a dynamic, stimulationand happy
-            atmosphere.  I havean infinite passion to mould young minds and I recognise remarkable expansion of development that occures from birth to five years.  Working with Children
+            atmosphere.  I have an infinite passion to mould young minds and I recognise remarkable expansion of development that occures from birth to five years.  Working with Children
             has always been my greatest passion apart from studying Early Childhood Development Education. I have broadened my scope of knowledge in Childhood Development through studying 
             Development.
             Through my knowledge and fieldof study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
