--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,8 @@
             atmosphere.  I have an infinite passion to mould young minds and I recognise remarkable expansion of development that occures from birth to five years.  Working with Children
             has always been my greatest passion apart from studying Early Childhood Development Education. I have broadened my scope of knowledge in Childhood Development through studying 
             Development.
-            Through my knowledge and fieldof study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
-            ag while placing emphasis on having fun while learning.
+            Through my knowledge and field of study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
+            age while placing emphasis on having fun while learning.
         </P>
         <footer>
             <a href="index.html">Home page</a>
