--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <P>We provide nutritious meals which includes the option of breakfast from morning till mid morning snack and lunch.  Our meals are freshly 
         prepared daily by our professional chef on our premises and teachers also participate in the consumption of the food prepared.
         Our Menu is on display on our notice board for all to view. All dietery requirements are catered for.
-        Vegitarian meals are also available on request.
+        Vegiterian meals are also available on request.
     </P> 
     <h3>OUR CURRICULUM</h3><br>
     <br>
