--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <P>Our unique and creative Thermatic Based Curiculum focuses on and intergrates different areas of play and cognitive developement our 
         Childhood Sensory Activities and Science Lessons and create a solid foundation for higher learning.</P>
         
-        <a href="images/form.pdf" >Application form </a>
+        <embed src="images/form.pdf" >Application form>
 
 <footer>
     <a href="blog.html">Next Page</a>
