--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="stepping, creche">
+    <meta name="description" content="stepping stone">
+    <meta name="keywords" content="creche in veerining, pre-school, beginners>
     <title>Stepping Stone</title>  
     <link rel="stylesheet" href="style.css">
     <a href="blog.html">ADMISSION</a>
