--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="creche in veerining>
+    <meta name=keywords" content=pre-school, stepping stone>                                  
     
     <title>Stepping Stone</title>  
     <link rel="stylesheet" href="style.css">
@@ -71,7 +73,7 @@
     <P>Our unique and creative Thermatic Based Curiculum focuses on and intergrates different areas of play and cognitive developement our 
         Childhood Sensory Activities and Science Lessons and create a solid foundation for higher learning.</P>
         
-        <iframe src="images/form.pdf">Application form</iframe>
+        <embed src="images/form.pdf" type=appl>Application form</iframe>
 
 <footer>
     <a href="blog.html">Next Page</a>
