--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <P>Our unique and creative Thermatic Based Curiculum focuses on and intergrates different areas of play and cognitive developement our 
         Childhood Sensory Activities and Science Lessons and create a solid foundation for higher learning.</P>
         
-        <embed src="images/form.pdf" type=appl>Application form</iframe>
+        <a href="images/form.pdf">Application form<a/>
 
 <footer>
     <a href="blog.html">Next Page</a>
