--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="index.js"> </script>
     <div>
      
-        <img id="Logo.jpg" src="images/Logo.jpg">
+        <img id="Logo" src="images/Logo.jpg">
         <img id="spider-man" src="images/Spiderman.png">
              
     <h1 id="main-header">STEPPING STONE</h1>
