--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li>We have a camera on our premises monitoring dropping and pick up of our children.</li>
         </ul>
     <h3 class="nutrition-heading">NUTRITION</h3><br>
-        <img  id="nutrition-pic" src="Nutrition.jpg"><br>
+        <img  id="nutrition-pic" src="images/Nutrition.jpg"><br>
                                  
     
 
