--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 </head>
 <body id="main-body">
     <script src="index.js"> </script>
-    <div>
+    <div id="heading">
      
         <img id="Logo" src="images/Logo.jpg">
         <img id="spider-man" src="images/Spiderman.png">
+        <div>
              
     <h1 id="main-header">STEPPING STONE</h1>
     <H1 id="day">DAY AND AFTERCARE</H1>
     <H1 id="nursery">NURSERY SCHOOL</H1>
+        </div>
 </div>
     <br>
     <hr>
