--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <ul>
         <ol>
             <li>We have safeguarding policies and procedures in place</li>
-            <li>We are also protected by neighbouhood watch.</li>
+            <li>We are also protected by neighbourhood watch.</li>
             <li>We have a camera on our premises monitoring dropping and pick up of our children.</li>
         </ul>
     <h3 class="nutrition-heading">NUTRITION</h3><br>
