--- a/Blogb.html
+++ b/Blogb.html
@@ -74,6 +74,7 @@ Cell No: +27-73 373 0577/
 
 <p><div>
      <a href="mailto:Pusejoy@gmail.com">Email</a>
+    Email: steppingstone01nursery@gmail.com
     Mrs Puse Joy: pusejoy@gmail.com
     </div><br>
 
