--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
         <img id="swimming" src="images/Childcare.jpeg"><br>
 
         <P>Stepping Stone Nursery School will work with you the parent to make your baby's transition a smoothand happy time by creating a warm naturing interaction with 
-            all babies in and out care.  We provide personalised care for each baby based on your baby's unique needs, nutritional guidelines and any specail attention required.
+            all babies in and out care.  We provide personalised care for each baby based on your baby's unique needs, nutritional guidelines and any special attention required.
             Through our low ratios, in the warm setting of each baby room in our Nursery; daily age appropriate stimulation is provided as help for your infant to reach his/her 
             developmental milestones.
         </P>
