--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="creche in veerining>
-    <meta name=keywords" content=pre-school, stepping stone>                                  
+    <meta name="description" content="creche in veerining">
+    <meta name="keywords" content="pre-school, stepping stone">                                  
     
     <title>Stepping Stone</title>  
     <link rel="stylesheet" href="style.css">
