--- a/Blogb.html
+++ b/Blogb.html
@@ -21,7 +21,7 @@
     <body id="bodyc">
 
      
-<p>Stepping Stone day and after care bursing school aims to create a dynamic, welcoming atmosphere for children 0-5 years where learning is fun!!!</p>
+<p>Stepping Stone day and after care nursing school aims to create a dynamic, welcoming atmosphere for children 0-5 years where learning is fun!!!</p>
 
 <ul id="list"> 
 <li class="fullday">Full Day 06:00-1900</li>
