--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     <title>Stepping Stone</title>  
     <link rel="stylesheet" href="style.css">
-    <a href="blog.html">ADMISSION</a><br>
-    <a href="Blogb.html">CONTACT</a><br>
+    <a href="blog.html">ADMISSION</a>
+    <a href="Blogb.html">CONTACT</a>
     <a href="images/form.pdf" target=_blank>APPLICATION FORM</a>
    
 
