--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body id="main-body">
     <script src="index.js"> </script>
-    <div id="heading">        
+    <div id="heading">  
+        <img  id="Logo1" src="images/Logo1.jpg"
         
            
     <h1>STEPPING STONE</h1>
