--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <a href="blog.html">ADMISSION</a>
     <a href="Blogb.html">CONTACT</a>
-    <a href="images/form.pdf" target=_blank>APPLICATION FORM</a>
+    <a href="images/form.pdf" target=_blank>APPLICATION FORM</a><br>
     <img  id="Logo1" src="images/Logo1.jpg"
 
 </head>
