--- a/blog.html
+++ b/blog.html
@@ -50,6 +50,24 @@
             Through my knowledge and field of study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
             age while placing emphasis on having fun while learning.
         </P>
+        <p>Birthdays Celebrated <br>
+            <br>
+            <img id="vana" src="images/vana.jpg"><br>
+            <br>
+            <img id="tese" src="images/tese.jpg"><br>
+            <br>
+            <img id="creche" src="images/creche.jpg"><br>
+            <br>
+            <img id="day" src="images/day.jpg"><br>
+            <br>
+            <img id="kids" src="images/kids.jpg"><br>
+            <br>
+            <img id="tamba" src="images/tamba.jpg"><br>
+            <br>
+            <img id="apa" src="images/apa.jpg"><br>
+            <br>
+        
+        </p>
         <footer>
             <a href="index.html">Home page</a>
             <a href="Blogb.html">Contacts</a><br>
