--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <a href="blog.html">ADMISSION</a>
     <a href="Blogb.html">CONTACT</a>
+    <a href="">Events & Birthdays</a>
     <a href="images/form.pdf" target=_blank>APPLICATION FORM</a><br>
  
 
