--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <a href="index.html">Home Page</a>
         <a href="Blogb.html">CONTACT</a>
+        <a href="events">Events</a>
     </header>
     <body id="main-bodyb">
         <script src="index.js"></script>
@@ -50,7 +51,7 @@
             Through my knowledge and field of study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
             age while placing emphasis on having fun while learning.
         </P>
-        <p>Birthdays Celebrated <br>
+        <p id="events">Birthdays Celebrated <br>
             <br>
             <img id="vana" src="images/vana.jpg"><br>
             <br>
