--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Stepping Stone</title>  
     <link rel="stylesheet" href="style.css">
     <a href="blog.html">ADMISSION</a>
-    <a href="Blogb.html">CONTACT</a>
-    <a href="blog.html">Events & Birthdays</a>
+    <a id="cont"  href="Blogb.html">CONTACT</a>
+    <a id="event" href="blog.html">Events & Birthdays</a>
     <a href="images/form.pdf" target=_blank>APPLICATION FORM</a><br>
  
 
