--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <title>Blog Stepping Stone</title>
         <link rel="stylesheet" href="style.css">
         <a href="index.html">Home Page</a>
-        <a id="derere" href="Blogb.html">CONTACT</a>
+        <a id="derere" href="Blogb.html">Contacts</a>
         <a href="events">Events</a>
     </header>
     <body id="main-bodyb">
