--- a/Blogb.html
+++ b/Blogb.html
@@ -75,6 +75,9 @@ Cell No: +27-73 373 0577/
     16 Cornwall
     Meriman Avenue
     Opposite Pride Junior Academy
+        <br>
+        <br>
+        <a id="map" href="https://goo.gl/maps/pSAn73bDrKS9Jkxc8">Map</a>
     
 </p>
 <footer>
