--- a/Blogb.html
+++ b/Blogb.html
@@ -6,8 +6,8 @@
        
     
         <link rel="stylesheet" href="style.css">
-        <a href="index.html">Home Page</a>
-        <a href="blog.html">Information           
+        <a id="home" href="index.html">Home Page</a>
+        <a id="info" href="blog.html">About Us      
         </a>
     </head>
     <body id="bodyc">
