--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,9 @@
             <br>
             <img id="apa" src="images/apa.jpg"><br>
             <br>
+            Our kids had fun over the weekend of the 8th of July as we celebrated two birthdays for our kids. Thank you very much parents for 
+            supporting us and your kids in this difficult times.
+            We plan of improving each time so that we exceed above expectations in our services and kids welfare.
         
         </p>
         <footer>
