--- a/Blogb.html
+++ b/Blogb.html
@@ -23,37 +23,32 @@
 
 
 <li>After Care 16:00-1900</li>
-<li>Weekend special</li>
+<li>Weekend special</li><br>
+    <hr>
+    <br>
+    <form action="https://formsubmit.co/pusejoy@gmail.com" method="POST">
+			<div>
+			
+			<label>Name</label>
+			<input type="text" name="firstName" placeholder="Enter first name"><br>
+			<br>
+			<label>Surname</label>
+			<input type="text name" name="lastName" placeholder="Enter Surname"><br>
+			<br>
+			<label>Contact Number</label>
+			<input type="Number" placeholder="cell no."><br><br>
+			<label>EMAIL</label>
+			<input type="email" name="EMAIL" placeholder="EMAIL">
+			<hr>
+			<label>Message</label>
+			<textarea type="text area" name="Message" placeholder="Message"></textarea><br>
+			<br>
+			<button id="send" input="submit">Submit</button><br>
+		</div>
+		<br>
+        <br>
 
-</ul>
-<hr>
- <form action="https://formsubmit.co/pusejoy@gmail.com" method="POST">
-<div>
-<label >First Name</label>
-<input type="text" id="firstName"><br>
-<br>
-<label>Last Name</label>
-<input type="text" id="surname"><br>
-<br>
-<label>Gender</label>
-<select>
-    <option value="Male">Male</option>
-    <option value="Female">Female</option>
-    <option value="Other">Other</option>
-</select>
 
-<label>Age</label>
-<input type="number" 
-value=5><br>
-<br>
-<label>Date of Enrollment</label>
-<input type="date"><br>
-    
-
-<br>
-<div>
-<button type="submit" id="myButton">Submit</button>
-</div>
 </form >
 
 
