--- a/Blogb.html
+++ b/Blogb.html
@@ -61,14 +61,15 @@ Cell No: +27-73 373 0577/
 </p>
 
 <p><div>
-     <a href="mailto:Pusejoy@gmail.com">Email</a>
-    Email: steppingstone01nursery@gmail.com
+     <a href="mailto:Pusejoy@gmail.com">Email</a><br>
+    Email: steppingstone01nursery@gmail.com<br>
     Mrs Puse Joy: pusejoy@gmail.com
     </div><br>
 
     Address: 
-    16 Cornwall
-    Meriman Avenue
+    Shop No. 3	<br>	
+    16 Cornwall <br>
+    Meriman Avenue<br>
     Opposite Pride Junior Academy
         <br>
         <br>
