--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,69 @@
             <img id="tamba" src="images/tamba.jpg"><br>
             <br>
             <img id="apa" src="images/apa.jpg"><br>
+            <img id="1" src="images.1jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="2" src="images/2.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="3" src="images/3.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="4" src="images/4.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="5" src="images/5.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="6" src="images/6.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="7" src="images/7.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="8" src="images/8.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="9" src="9.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="10" src="10.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="11" src="11.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="12" src="12.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="12" src="13.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="14" src="14.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="15" src="15.jpg"><br>
+            <br>
+            <br>
+            <br>
+            <img id="" src=""><br>
+            <br>
+            <br>
             <br>
             Our kids had fun over the weekend of the 8th of July as we celebrated two birthdays for our kids. Thank you very much parents for 
             supporting us and your kids in this difficult times.
