--- a/blog.html
+++ b/blog.html
@@ -66,63 +66,64 @@
             <img id="tamba" src="images/tamba.jpg"><br>
             <br>
             <img id="apa" src="images/apa.jpg"><br>
-            <img id="1" src="images.1jpg"><br>
+            <br>
+            <img id="hu" src="images/hujpg"><br>
             <br>
             <br>
             <br>
-            <img id="2" src="images/2.jpg"><br>
+            <img id="ho" src="images/ho.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="3" src="images/3.jpg"><br>
+            <img id="hi" src="images/hi.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="4" src="images/4.jpg"><br>
+            <img id="he" src="images/he.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="5" src="images/5.jpg"><br>
+            <img id="ha" src="images/ha.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="6" src="images/6.jpg"><br>
+            <img id="gu" src="images/gu.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="7" src="images/7.jpg"><br>
+            <img id="go" src="images/go.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="8" src="images/8.jpg"><br>
+            <img id="gi" src="images/gi.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="9" src="9.jpg"><br>
+            <img id="ge" src="images/ge.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="10" src="10.jpg"><br>
+            <img id="ga" src="images/ga.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="11" src="11.jpg"><br>
+            <img id="bu" src="images/bu.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="12" src="12.jpg"><br>
+            <img id="bi" src="images/bi.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="12" src="13.jpg"><br>
+            <img id="bo" src="images/bo.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="14" src="14.jpg"><br>
+            <img id="be" src="images/bi.jpg"><br>
             <br>
             <br>
             <br>
-            <img id="15" src="15.jpg"><br>
+            <img id="ba" src="images/ba.jpg"><br>
             <br>
             <br>
             <br>
