--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
             <br>
             <img id="apa" src="images/apa.jpg"><br>
             <br>
-            <img id="hu" src="images/hujpg"><br>
+            <img id="hu" src="images/hu.jpg"><br>
             <br>
             <br>
             <br>
