--- a/Blogb.html
+++ b/Blogb.html
@@ -33,12 +33,13 @@
 			<input type="text" name="firstName" placeholder="Enter first name"><br>
 			<br>
 			<label>Surname</label>
-			<input type="text name" name="lastName" placeholder="Enter Surname"><br>
+			<input type="text" name="lastName" placeholder="Enter Surname"><br>
 			<br>
 			<label>Contact Number</label>
-			<input type="Number" placeholder="cell no."><br><br>
+			<input type="text" placeholder="cell no."><br><br>
 			<label>EMAIL</label>
-			<input type="email" name="EMAIL" placeholder="EMAIL">
+			<input type="email" name="EMAIL" placeholder="EMAIL"><br>
+				<label id="subscribe">Subscribe</label>
 			<hr>
 			<label>Message</label>
 			<textarea type="text area" name="Message" placeholder="Message"></textarea><br>
