--- a/Blogb.html
+++ b/Blogb.html
@@ -40,6 +40,7 @@
 			<label>EMAIL</label>
 			<input type="email" name="EMAIL" placeholder="EMAIL"><br>
 				<label id="subscribe">Subscribe</label>
+				<input type="radio">
 			<hr>
 			<label>Message</label>
 			<textarea type="text area" name="Message" placeholder="Message"></textarea><br>
