--- a/Blogb.html
+++ b/Blogb.html
@@ -39,8 +39,11 @@
 			<input type="text" placeholder="cell no."><br><br>
 			<label>EMAIL</label>
 			<input type="email" name="EMAIL" placeholder="EMAIL"><br>
+				<br>
+				<br>
 				<label id="subscribe">Subscribe</label>
-				<input type="radio">
+				<input type="radio"><br>
+				<br>
 			<hr>
 			<label>Message</label>
 			<textarea type="text area" name="Message" placeholder="Message"></textarea><br>
