--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <a href="index.html">Home Page</a>
         <a id="derere" href="Blogb.html">Contacts</a>
+        <a href="#">Birthdays</a>
         
     </header>
     <body id="main-bodyb">
@@ -51,7 +52,7 @@
             Through my knowledge and field of study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
             age while placing emphasis on having fun while learning.
         </P>
-        <p id="#">Birthdays Celebrated <br>
+        <p id="birth">Birthdays Celebrated <br>
             <br>
             <img id="vana" src="images/vana.jpg">
             
