--- a/Blogb.html
+++ b/Blogb.html
@@ -15,15 +15,15 @@
      
 <p>Stepping Stone day and after care nursing school aims to create a dynamic, welcoming atmosphere for children 0-5 years where learning is fun!!!</p>
 
-<ul id="list"> 
-<li class="fullday">Full Day 06:00-1900</li>
-<img id="fullday">
-<li>Part time available</li>
-<li>Half Day 06:00-1600</li><br>
+
+Full Day 06:00-1900<br>
+
+Part time available<br>
+Half Day 06:00-1600<br>
 
 
-<li>After Care 16:00-1900</li>
-<li>Weekend special</li><br>
+After Care 16:00-1900<br>
+Weekend special<br>
     <hr>
     <br>
     <form action="https://formsubmit.co/pusejoy@gmail.com" method="POST">
@@ -58,10 +58,10 @@
 
 
 
-<h3>Contact Details:</h3>
+<h3>Contact Details:</h3><br>
 <p>
-Cell No: +27-73 373 0577/
-         +27-65-861 6234
+Cell No: +27-73 373 0577/<br>
+         +27-65-861 6234<br>
 
 </p>
 
