--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
             Through my knowledge and field of study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
             age while placing emphasis on having fun while learning.
         </P>
-        <p id="birth">Birthdays Celebrated <br>
+        <strong id="birth">Birthdays Celebrated</strong> <br>
             <br>
             <img id="vana" src="images/vana.jpg">
             
