--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <a href="index.html">Home Page</a>
         <a id="derere" href="Blogb.html">Contacts</a>
-        <a href="#">Birthdays</a>
+        <a href="#birth">Birthdays</a>
         
     </header>
     <body id="main-bodyb">
