--- a/blog.html
+++ b/blog.html
@@ -85,13 +85,13 @@
         
     
         <h2>SCHOOL TERMS</h2><br>
-        <img id="school-term" src="images/school term.jpg">
+        <img id="school-term" src="images/school term.jpg"><br>
         <P>
             We follow the 4 school terms model in time with most schools in the area. We offer a Holiday program during school terms holidays at no additional cost.
             Where Children are situated with fun activities and enjoy a break from school curriculum.
 
             NB: The school closes on public holidays and over the December Holiday Period.
-        </P>
+        </P><br>
         <h2>INFANT CARE</h2><br>
 
         <img id="swimming" src="images/Childcare.jpeg"><br>
