--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,8 @@
     <h2 id="our">OUR MISSION</h2><br>
     <img id="our-mission" src="images/Our mission.jpg"><br>
     <br>
-    <small>Train up a child in the way he should go: and when he is old, he will not depart from it. (provebs 22:6) </small>
+    <small>Train up a child in the way he should go: and when he is old, he will not depart from it. (provebs 22:6) </small><br>
+    <br>
 
 <p> At Stepping Stone day and aftercare nursery school, we pride ourselves in providing a safe, fun accademically<br>
     rich environment that promotes social emotional cognitive and physical growth. We aim to engage our children in <br>
