--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
 <div id="slider">
 	<figure>
-	<img src="images/da.jpg">
-	<img src="images/de.jpg">
-	<img src="images/di.jpg">
-	<img src="images/do.jpg">
+	<img src="images/th.jpeg">
+	<img src="images/ta.jpeg">
+	<img src="images/tc.jpeg">
+	<img src="images/ti.jepg">
 	</figure>
 	
 </div>
