--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<img src="images/th.jpeg">
 	<img src="images/ta.jpeg">
 	<img src="images/tc.jpeg">
-	<img src="images/ti.jepg">
+	<img src="images/ti.jpeg">
 	</figure>
 	
 </div>
