--- a/blog.html
+++ b/blog.html
@@ -138,7 +138,7 @@
     <br>
     <img id="tr" src="images/tr.jpeg">
     
-    <img id="tj" src="images.tj.jpeg"><br>
+    <img id="tj" src="images/tj.jpeg"><br>
     <br>
     <img id="ti" src="images/ti.jpeg">
     
