--- a/blog.html
+++ b/blog.html
@@ -136,7 +136,7 @@
     day for our pupils who were excited to seelive animals for the first time.  Once again we thank you parents for this wanderful support.</p>
     <br>
     <br>
-    <img id="de" src="images/de.jpeg">
+    <img id="de" src="images/de.jpg">
     
     <img id="tj" src="images/tj.jpeg"><br>
     <br>
