--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				opacity: 0.5;
 			}
 			#body-main{
-				background-image: url(images/good.jpg);
+				background-image: url(images/day.jpg);
 				background-size: cover;
 			}
 			#tribe{
