--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ h5{
 		
 			
 			<div class="img-container">
-				<img  src="images/advert.png">
+				<img  src="images/ti.jpeg">
 				
 			</div>
 
