--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ h5{
 <br>
 <body id="body-main">
 	<div class="fit-screen">
-	 <img id="chain" src="images/va.png"><h1 id="main-head">STEPPING STONE NURSERY SCHOOL </h1>
+	 <img id="chain" src="images/logo.jpg"><h1 id="main-head">STEPPING STONE NURSERY SCHOOL </h1>
 	<br>
 	<nav>
 <h5></h5>
