--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ h5{
 	</ul>
 	</nav>
 	<br>
-		<h5>+27 73 373 0577</h5>
+		<h5>+27 73 373 0577</h5>  <small>Train up a child in the way he should go: and when he is old, he will not depart from it. (provebs 22:6) </small><br>
 	<br>
 
 	<div class="slider-frame">
