--- a/blog.html
+++ b/blog.html
@@ -136,7 +136,7 @@
             Through my knowledge and field of study i have implemented a Curriculum for our school that focuses on Stimulating each child's inner craving for knowledge by introducing
             age while placing emphasis on having fun while learning.
         </P>
-        <strong id="birth">Events & Birthdays Celebrated</strong> <br>
+        <h4 id="birth">Events & Birthdays Celebrated</h4> <br>
             <br>
         <br>
     <p>Our kids and Teachers took a trip to Johannesburg Zoo to see and learn about wild and domestic animals. It was a very pleasant and exciting<br>
