--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@
     <head>
         <title>Stepping Stone</title>
         <link rel="stylesheet" href="style.css">
-        <a href="index.html">Home Page</a>
+        <a href="index.html">HOME </a>
         <a id="cont"  href="Blogb.html">CONTACT</a>
         
-        <a href="#birth">Birthdays</a>
+        <a href="#birth">EVENTS</a>
         
    
    
@@ -21,6 +21,9 @@
            font-size: 30px;
            color: white;
            background-color: black;
+       }
+       #cont{
+           margin-right: 12px;
        }
        </style>
 <body id="main-body">
