--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ h5{
 	
 	<h4>2024 Intake</h4><br>
 
-<p>We are now open to 2024 3 months- grade R Intake .</p>
+<p>We are now open to 2024 Intake (3 months- grade R ) .</p>
 	<br>
 	<h4>Day & After Care Sercices</h4><br>
 	<p>Weekend Special when you want to travel we can look after the child the whole weekend at an affordable fee<br></p>
