--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
         <a href="index.html">HOME </a>
         <a id="cont"  href="Blogb.html">CONTACT</a>
         
-        <a href="#birth">EVENTS</a>
+        <a id="ev" href="#birth">EVENTS</a>
         
    
    
@@ -23,6 +23,9 @@
            background-color: black;
        }
        #cont{
+           margin-right: 12px;
+       }
+       #eve{
            margin-right: 12px;
        }
        </style>
