--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,9 @@
             Through our low ratios, in the warm setting of each baby room in our Nursery; daily age appropriate stimulation is provided as help for your infant to reach his/her 
             developmental milestones.
         </P>
-        <h4>TODDLERS 1-2 YEARS</h4>
+        <h4>TODDLERS 1-2 YEARS</h4><br>
+    <img id="swimming" src="images/tj.jpeg"><br>
+    
         <p>This age group enjoys activities that are build around our toddlers limitless curiosity as we encourage their natural desire to explore through a range of indoor fun 
             like arts, music, movement, sensory activities and outside gross motor play. Our toddlers days are packed with fun learning experiences that enhance their development.
         </p>
