--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,9 @@
        #eve{
            margin-right: 12px;
        }
+       p{
+           color: grey;
+       }
        </style>
 <body id="main-body">
     <script src="index.js"> </script>
