--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title>Stepping Stone Nursery School</title>
-	<meta name="description" content="A & R Furniture">
-	<meta name="keywords" content="recliner couches for sale, couches , upholstery in vereening, sofa replacement, leather couches in vereening, dining chairs ">
+	<meta name="description" content="Stepping Stone in Vereening">
+	<meta name="keywords" content="stepping stone nursery, creche in Vereening , Nursery school vereening, Pre-school, day care center ">
 	<style type="text/css">
 		*{
 			padding: 0;
