--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,11 @@
     <h4>OUR MISSION</h4><br>
     <img id="our-mission" src="images/Our mission.jpg"><br>
     <br>
-    
+    <br>
+    <video width-"800" controls>
+        <source src="video/stone.mp4" type="video/mp4">
+    </video>
+    <br>
     <br>
 
 <p> At Stepping Stone day and aftercare nursery school, we pride ourselves in providing a safe, fun accademically<br>
