--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@ p{
 h5{
 	color: white;
 	margin-left: 30px;
-}		
+}
+		p{ 
+			color: white;
+		 }
 	</style>
 	<link rel="stylesheet" type="text/css" href="http://kit.fontawesome.com/a076d05399">
 </head>
