--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ h5{
 	<nav>
 <h5></h5>
 		
-	<a href=""><img id="facebook" src="images/facebook.jpg" target="_blank"></a>
+	<a href="https://www.facebook.com/puseletsojoyce.selepe?mibextid=rS40aB7S9Ucbxw6v"><img id="facebook" src="images/facebook.jpg" target="_blank"></a>
 	<a href="https://api.whatsapp.com/send?phone=%2B27733730577&data=ARArWsDNitpWZheDda1cy78LTY1BSsjPn6c5_YJ492M1sTHf3qNvD9NDIKQxi_jQQN-PvMdjncOxTtlHWB-y1_5s_Igx-9PST05H4AMjusDB4CCMF_-stHU1mlAIxp1cleMGK6mV5_FgCKuf0aYLcvM4Vw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwAR35dsDp1hRv3XR7CKfl_JQFM9sFJfqnGRnaL3AUPwHv1xIcT_6wOcCfSX0"><img id="whats" src="images/whats.jpeg"></a>
 	 	
 		<ul>
