--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h5{
 		
 			
 			<div class="img-container">
-				<img  src="images/ti.jpeg">
+				<img  src="images/Building Blocks.jpg">
 				
 			</div>
 
