--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,98 @@
        p{
            color: grey;
        }
+       #gara{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #gere{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #giri{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #goro{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #guru{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #hara{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #here{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #hiri{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #mara{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #mere{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #miri{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #moro{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #muru{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #nara{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #nere{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #niri{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #noro{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #nuru{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #zara{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #zere{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #ziri{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #zoro{
+           width: 400px;
+           border-radius: 5px;
+       }
+       #zoro{
+           width: 400px;
+           border-radius: 5px;
+       }
        </style>
 <body id="main-body">
     <script src="index.js"> </script>
@@ -255,6 +347,41 @@
            <p> Our kids had fun over the weekend of the 8th of July as we celebrated two birthdays for our kids. Thank you very much parents for 
             supporting us and your kids in this difficult times.
             We plan of improving each time so that we exceed above expectations in our services and kids welfare.</p>
+    <br>
+    <br>
+    <h4>End of the year Part & Birthday Celebrations</h4><br>
+    <br>
+    <a href="images/gara"><img id="gara" src="images/gara.jpg"></a></a>
+   <a href="images/gara"> <img id="gere" src="images/gere.jpg"></a><br>
+    <br>
+    <a href="images/gara"><img id="giri" src="images/giri.jpg"></a>
+    <a href="images/gara"><img id="goro" src="images/goro.jpg"></a><br>
+    <br>
+    <a href="images/gara"><img id="guru" src="images/gurur.jpg"></a>
+    <a href="images/gara"><img id="mara" src="images/mara.jpg"></a><br>
+    <br>
+    <a href="images/gara"><img id="mere" src="images/mere.jpg"></a>
+    <a href="images/gara"><img id="miri" src="images/miri.jpg"></a><br>
+    <br>
+   <a href="images/gara"> <img id="moro" src="images/moro.jpg"></a>
+    <a href="images/gara"><img id="muru" src="images/muru.jpg"></a><br>
+    <br>
+   <a href="images/gara"> <img id="nara" src="images/nara.jpg"></a>
+    <a href="images/gara"><img id="nere" src="images/nere.jpg"></a><br>
+    <br>
+   <a href="images/gara"> <img id="noro" src="images/noro.jpg"></a>
+    <a href="images/gara"><img id="nuru" src="images/nuru.jpg"></a><br>
+    <br>
+    <a href="images/gara"><img id="niri" src="images/niri.jpg"></a>
+   <a href="images/gara"> <img id="hara" src="images/hara.jpg"></a><br>
+    <br>
+   <a href="images/gara"> <img id="here" src="images/here.jpg"></a>
+    <a href="images/gara"><img id="hiri" src="images/hiri.jpg"></a><br>
+    <br>
+   <a href="images/gara"> <img id="zara" src="images/zara.jpg"></a>
+   <a href="images/gara"> <img id="zere" src="images/zere.jpg"></a><br>
+    <br>
+    
         
         </p>
         <footer>
