--- a/blog.html
+++ b/blog.html
@@ -250,6 +250,19 @@
     day for our pupils who were excited to seelive animals for the first time.  Once again we thank you parents for this wanderful support.</p>
     <br>
     <br>
+    <video width="700" height="500" controls>
+        <source src="video/party.mp4" type="video/mp4">
+    </video>
+    <br>
+    <br>
+    <br>
+    <video width="700" height="500" controls>
+        <source src="video/step.mp4" type="video/mp4">
+    </video>
+    <br>
+    <br>
+    <h4>Our Library</h4><br>
+    <br>
    <a href="images/tr.jpeg"> <img id="tr" src="images/tr.jpeg"></a>
     
     <a href="images/tj.jpeg"> <img id="tj" src="images/tj.jpeg"></a><br>
