--- a/blog.html
+++ b/blog.html
@@ -365,34 +365,34 @@
     <h4 id="end" >End of the year Part & Birthday Celebrations</h4><br>
     <br>
     <a href="images/gara"><img id="gara" src="images/gara.jpg"></a></a>
-   <a href="images/gara"> <img id="gere" src="images/gere.jpg"></a><br>
+   <a href="images/gere"> <img id="gere" src="images/gere.jpg"></a><br>
     <br>
-    <a href="images/gara"><img id="giri" src="images/giri.jpg"></a>
-    <a href="images/gara"><img id="goro" src="images/goro.jpg"></a><br>
+    <a href="images/giri"><img id="giri" src="images/giri.jpg"></a>
+    <a href="images/goro"><img id="goro" src="images/goro.jpg"></a><br>
     <br>
-    <a href="images/gara"><img id="guru" src="images/gurur.jpg"></a>
-    <a href="images/gara"><img id="mara" src="images/mara.jpg"></a><br>
+    <a href="images/guru"><img id="guru" src="images/guru.jpg"></a>
+    <a href="images/mara"><img id="mara" src="images/mara.jpg"></a><br>
     <br>
-    <a href="images/gara"><img id="mere" src="images/mere.jpg"></a>
-    <a href="images/gara"><img id="miri" src="images/miri.jpg"></a><br>
+    <a href="images/mere"><img id="mere" src="images/mere.jpg"></a>
+    <a href="images/miri"><img id="miri" src="images/miri.jpg"></a><br>
     <br>
-   <a href="images/gara"> <img id="moro" src="images/moro.jpg"></a>
-    <a href="images/gara"><img id="muru" src="images/muru.jpg"></a><br>
+   <a href="images/moro"> <img id="moro" src="images/moro.jpg"></a>
+    <a href="images/muru"><img id="muru" src="images/muru.jpg"></a><br>
     <br>
-   <a href="images/gara"> <img id="nara" src="images/nara.jpg"></a>
-    <a href="images/gara"><img id="nere" src="images/nere.jpg"></a><br>
+   <a href="images/nara"> <img id="nara" src="images/nara.jpg"></a>
+    <a href="images/nere"><img id="nere" src="images/nere.jpg"></a><br>
     <br>
-   <a href="images/gara"> <img id="noro" src="images/noro.jpg"></a>
-    <a href="images/gara"><img id="nuru" src="images/nuru.jpg"></a><br>
+   <a href="images/noro"> <img id="noro" src="images/noro.jpg"></a>
+    <a href="images/nuru"><img id="nuru" src="images/nuru.jpg"></a><br>
     <br>
-    <a href="images/gara"><img id="niri" src="images/niri.jpg"></a>
-   <a href="images/gara"> <img id="hara" src="images/hara.jpg"></a><br>
+    <a href="images/niri"><img id="niri" src="images/niri.jpg"></a>
+   <a href="images/hara"> <img id="hara" src="images/hara.jpg"></a><br>
     <br>
-   <a href="images/gara"> <img id="here" src="images/here.jpg"></a>
-    <a href="images/gara"><img id="hiri" src="images/hiri.jpg"></a><br>
+   <a href="images/here"> <img id="here" src="images/here.jpg"></a>
+    <a href="images/hiri"><img id="hiri" src="images/hiri.jpg"></a><br>
     <br>
-   <a href="images/gara"> <img id="zara" src="images/zara.jpg"></a>
-   <a href="images/gara"> <img id="zere" src="images/zere.jpg"></a><br>
+   <a href="images/zara"> <img id="zara" src="images/zara.jpg"></a>
+   <a href="images/zere"> <img id="zere" src="images/zere.jpg"></a><br>
     <br>
     
         
