--- a/blog.html
+++ b/blog.html
@@ -74,6 +74,7 @@
        #miri{
            width: 400px;
            border-radius: 5px;
+           height: 400px;
        }
        #moro{
            width: 400px;
@@ -82,6 +83,7 @@
        #muru{
            width: 400px;
            border-radius: 5px;
+           height: 400px;
        }
        #nara{
            width: 400px;
