--- a/blog.html
+++ b/blog.html
@@ -366,7 +366,7 @@
     <br>
     <h4 id="end" >End of the year Part & Birthday Celebrations</h4><br>
     <br>
-    <a href="images/gara"><img id="gara" src="images/gara.jpg"></a></a>
+    <a href="images/gara"><img id="gara" src="images/gara.jpg"></a>
    <a href="images/gere"> <img id="gere" src="images/gere.jpg"></a><br>
     <br>
     <a href="images/giri"><img id="giri" src="images/giri.jpg"></a>
