--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 	<title>Stepping Stone Nursery School</title>
 	<meta name="description" content="Stepping Stone in Vereening">
 	<meta name="keywords" content="stepping stone nursery, creche in Vereening , Nursery school vereening, Pre-school, day care center ">
+	<head>
+    <link rel="canonical" href="https://www.steping-stone.org">
+		<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Stepping Stone",
+  "name": "Stepping Stone Nursery",
+  "url": "https://www.steping-stone.org",
+  "logo": "https://www.steping-stone.org/logo.jpg",
+  "description": "Creche in Vereening, Nursery school in town"
+}
+</script>
+
+</head>
+
 	<style type="text/css">
 		*{
 			padding: 0;
