--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				opacity: 0.5;
 			}
 			#body-main{
-				background-image: url(images/day.jpg);
+				background-image: url(images/Bag.jpg);
 				background-size: cover;
 			}
 			#tribe{
@@ -258,7 +258,7 @@ h5{
 		
 			
 			<div class="img-container">
-				<img  src="images/Building Blocks.jpg">
+				<img  src="images/Bags.jpg">
 				
 			</div>
 
