--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FLKZ6F9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6FLKZ6F9JW');
+</script>
 	<title>Stepping Stone Nursery School</title>
 	<meta name="description" content="Stepping Stone in Vereening">
 	<meta name="keywords" content="stepping stone nursery, creche in Vereening , Nursery school vereening, Pre-school, day care center ">
