--- a/Blogb.html
+++ b/Blogb.html
@@ -76,7 +76,7 @@ Cell No: +27-73 373 0577/<br>
 
 <p><div>
      <a href="mailto:Pusejoy@gmail.com">Email</a><br>
-    Email: steppingstone01nursery@gmail.com / info@steping-stone.org<br>
+    Email: steppingstone01nursery@gmail.com / <br>
     Mrs Puse Joy: pusejoy@gmail.com
     </div><br>
 
