--- a/Blogb.html
+++ b/Blogb.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531257337326657"
+     crossorigin="anonymous"></script>
+	    
 	    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6FLKZ6F9JW"></script>
 <script>
