--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<title>Stepping Stone Nursery School</title>
 	<meta name="description" content="Stepping Stone in Vereening">
 	<meta name="keywords" content="stepping stone nursery, creche in Vereening , Nursery school vereening, Pre-school, day care center ">
-	
+	<meta name="google-adsense-account" content="ca-pub-4531257337326657">
 	<head>
     <link rel="canonical" href="https://www.steping-stone.org">
 		<script type="application/ld+json">
