--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="gallery">
             <img src="images/Bags.jpg" alt="Gallery Image 1">
             <img src="images/Bag.jpg" alt="Gallery Image 2">
-            <img src="images/Logo.jpg" alt="Gallery Image 3">
+            <img src="images/Bag.jpg" alt="Gallery Image 3">
         </div>
 
         <div class="contact-info">
