--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         }
 
         .hero {
-            background: url('images/Bag.jpg') no-repeat center center/cover;
+            background: url('images/Logo1.jpg') no-repeat center center/cover;
             height: 60vh;
             display: flex;
             align-items: center;
