--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
     <div class="container">
         <div class="gallery">
             <img src="images/Bags.jpg" alt="Gallery Image 1">
-            <img src="images/Bag.jpg" alt="Gallery Image 2">
-            <img src="images/Bag.jpg" alt="Gallery Image 3">
+            <img src="images/Begs.jpg" alt="Gallery Image 2">
+            <img src="images/Beg.jpg" alt="Gallery Image 3">
         </div>
 
         <div class="contact-info">
