--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #fff;
+            color: #D4AF37;
             text-align: center;
         }
 
